# big-oh-lines

./: Cargo.toml  README.md
benches/: bench.rs
bol_base/: Cargo.toml
bol_base/src/: lib.rs
bol_bsearch/: Cargo.toml
bol_bsearch/src/: lib.rs
bol_bsearch2/: Cargo.toml
bol_bsearch2/src/: lib.rs
bol_bsearch4/: Cargo.toml
bol_bsearch4/src/: lib.rs
bol_bsearch5/: Cargo.toml
bol_bsearch5/src/: lib.rs
bol_btree/: Cargo.toml
bol_btree/src/: lib.rs
bol_linear/: Cargo.toml
bol_linear/src/: lib.rs
bol_linearfancy/: Cargo.toml
bol_linearfancy/src/: lib.rs
bol_linelinear/: Cargo.toml
bol_linelinear/src/: lib.rs
bol_linelinear8/: Cargo.toml
bol_linelinear8/src/: lib.rs
bol_linelinear82/: Cargo.toml
bol_linelinear82/src/: lib.rs
bol_linelinear83/: Cargo.toml
bol_linelinear83/src/: lib.rs
bol_linelinear84/: Cargo.toml
bol_linelinear84/src/: lib.rs
bol_linelinear85/: Cargo.toml
bol_linelinear85/src/: lib.rs
bol_linelinearsimd/: Cargo.toml
bol_linelinearsimd/src/: lib.rs
bol_table/: Cargo.toml
bol_table/src/: lib.rs
chart/: README.md  encode.sh  package.json
chart/src/: chart.tsx  project.ts
chart/src/scenes/: example.tsx  linear-time-0.tsx  linear_time_0_len.tsx  linelinear_mem.tsx  linelinear_prep_time.tsx  linelinear_simd_evolution_time.tsx  linelinear_simd_long_time.tsx  linelinear_stats_len_small.tsx  linelinear_time_0_len.tsx  linelinear_time_0_len_small.tsx  linelinear_vs_bsearch_stats.tsx  linelinear_vs_bsearch_time.tsx
src/: lib.rs
tests/: test.rs
