[package]
name = "big_oh_lines"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "bol_bsearch",
    "bol_btree",
    "bol_linear",
    "bol_table",
]

[workspace.dependencies]
bol_base = { path = "bol_base" }
criterion = { version = "0.4.0", default-features = false }
libc = "0.2.141"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_pcg = { version = "0.3.1", default-features = false }

[dependencies]
bol_base = { workspace = true }
bol_bsearch = { path = "bol_bsearch" }
bol_btree = { path = "bol_btree" }
bol_linear = { path = "bol_linear" }
bol_table = { path = "bol_table" }
criterion = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }

[[bin]]
name = "stats"
required-features = ["bol_stats"]

[[bench]]
name = "bench"
harness = false

[lib]
doctest = false
test = false

[features]
default = []
bol_stats = [
    "bol_base/bol_stats",
    "bol_bsearch/bol_stats",
    "bol_btree/bol_stats",
    "bol_linear/bol_stats",
    "bol_table/bol_stats",
]
